            micro:bit: Add support for LSM303 accelerometer/magnetometer
            micro:bit: Add delays at first boot to wait for USB UART to init and connect vis USB
            micro:bit: Re-added tab complete (enough space now)
            micro:bit: Added a fake pin for LED/LED1 that uses the LED matrix
            nRF52: Allow a cccd_handle of 0 for startNotifications

     2v06 : Allow `"ram"` keyword at the top of a function to allow it to be pretokenised and loaded to RAM
            Don't store line numbers for pretokenised functions
            Fix 1-byte overflow when using UDP (#1799)
            Remove 1-byte padding in Graphics lib
            Bangle.js: Make SPI flash memory map address configurable, and check end bounds (#1807)
            Bangle.js: More SPI flash memory map address to 0x60000000 to avoid ARM/nRF52 registers
            nRF52: Fix issue with fast Notifications causing Notification data to be duplicated
              http://forum.espruino.com/conversations/345949
            Bangle.js: allow custom splash screen with .splash file
            Pixl.js: Fix E.showMessage
            Puck.js v1: Fix regression that stopped Puck.IR(data) working - Puck.IR(data,D26,D25) required
            Puck.js v2: Ensure FET is used for IR output, fix selfTest errors for IR and Blue LED
            Bangle.js: Big speed improvements for 120x120 and 80x80 gfx modes
            Enable Graphics arraybuffer optimisations on all but low-end devices
            Add specific Graphics optimisations for 1 and 8 bit rendering
            Bangle.js: drawImage - add fast path for non-transparent 1 or 8bpp image blit (fix #1794)
            Graphics.drawImage docs improvements (fix #1812)
            Fix issue where it was possible to get an address of a non-memory-mapped FlashString
            Graphics.drawImage: Allow 8 bit palettes to be specified
            Bangle.js: Remove dumping of hardware state - saves some flash memory