@@ -27,6 +27,7 @@
             micro:bit: Re-added tab complete (enough space now)
             micro:bit: Added a fake pin for LED/LED1 that uses the LED matrix
             nRF52: Allow a cccd_handle of 0 for startNotifications
+            Align Tensorflow arena to 16 bytes - new Tensorflow requires this (fix #1914)
 
      2v06 : Allow `"ram"` keyword at the top of a function to allow it to be pretokenised and loaded to RAM
             Don't store line numbers for pretokenised functions
